--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^4.1.0",
     "cordova-browser": "6.0.0",
     "core-js": "^2.5.4",
+    "leaflet-routing-machine": "^3.2.12",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
